# AutoDS

./: .env.example  .gitignore  README.md  pyproject.toml
data_science/: agent.py  prompts.py  tools.py
data_science/sub_agents/: __init__.py
data_science/sub_agents/web_search/: __init__.py  agent.py  prompts.py  tools.py
